--- a/wp-content/themes/gimi65536-code-blog/style-jax.css
+++ b/wp-content/themes/gimi65536-code-blog/style-jax.css
@@ -3,7 +3,7 @@ mjx-container[display="true"] + br {
 	display: none;
 }
 
-mjx-container {
-	/*overflow-x: auto;
-	overflow-y: visible;*/
+/* To solve the width problem caused by MathJax */
+.entry-content > * {
+	overflow-x: auto;
 }
